Apply fix to ee9 and ee8